registry/deployment/app/overlays/prod/ingress-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-v2
spec:
  tls:
    - hosts:
        - registry.production.jmclcom.com
      secretName: jmclcom-tls
  rules:
    - host: registry.production.jmclcom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
